# Stateful-CNN

./: .cproject  .cyignore  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .travis-ci.yml  .travis.yml  CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  bin2c.py  cnn_common.c  cnn_common.cpp  cnn_common.h  common.c  common.h  common.mk  compare-model-output.py  config.h  configs.py  conv.c  conv.cpp  conv.h  conv_post.h  conv_pre.h  conv_prologue.h  data.c  data.h  debug.c  debug.cpp  debug.h  dvfs.h  gen_data.sh  gen_ops.py  intermittent-cnn.c  intermittent-cnn.cpp  intermittent-cnn.h  keras_run.py  (+35 more)
.ci/: install-git.sh  test-centos7.sh  test.sh
.github/workflows/: test.yml  test.yml-disabled
.launches/: Intermittent_FreeRTOS.launch  intermittent-cnn-msp430.launch
ARM-CMSIS/: create_symlinks.sh  download-extract-cmsis.sh  pipeline-dma.diff  vendor.sh
ARM-CMSIS/DSP/Source/MatrixFunctions/: arm_mat_mult_fast_q15.c
DSPLib_1_30_00_02/include/: DSPLib_lea.h  DSPLib_vector.h
DSPLib_1_30_00_02/source/vector/: msp_mac_q15.c
DataManager/: SimpDB.c  SimpDB.h  maps.c  maps.h
ExpTests/: 2-dimMatrix.c  2-dimMatrix.h  CalibrateCap.c  CalibrateCap.h  CalibrateTemp.c  CalibrateTemp.h  IntermittentCNNTest.c  IntermittentCNNTest.h  LEATest.c  LEATest.h  Semph.h  SenseCap.c  SenseCap.h  SenseTemp.c  SenseTemp.h  Tester.h  UartOut.c  UartOut.h  common.c  common.h  data.c  data.h  firFilter.c  firFilter.h  intermittent-cnn.c  intermittent-cnn.h  math16.c  math16.h  math32.c  math32.h  matrixmultiplication.c  matrixmultiplication.h  op_handlers.c  op_handlers.h  ops.c  ops.h
ExpTests/intermittent-cnn/: .gitignore  CMakeLists.txt  Makefile  cnn_common.c  common.c  common.h  conv.c  conv_post.h  conv_pre.h  conv_prologue.h  data.c  data.h  debug.c  debug.h  gen_data.sh  gen_ops.py  intermittent-cnn.c  intermittent-cnn.h  onnx_run_mnist.py  op_handlers.c  op_handlers.h  ops.h  ops.py  plat-linux.c  plat-linux.h  plat-msp430.c  plat-msp430.h  plat-psoc6.c  plat-psoc6.h  platform.h  run-intermittently.py  test-list.c  transform.py
ExpTests/intermittent-cnn/ARM-CMSIS/: arm_mat_mult_fast_q15_skip_transpose.diff
ExpTests/intermittent-cnn/TI-DSPLib/: eliminate-warnings.diff
FreeRTOS_Source/: croutine.c  tasks.c  timers.c
FreeRTOS_Source/include/: croutine.h
FreeRTOS_Source/portable/CCS/MSP430X/: port.c
FreeRTOS_Source/portable/GCC-Linux/: portmacro.h
FreeRTOS_Source/portable/MemMang/: heap_1.c
RecoveryHandler/: Recovery.c  Recovery.h
TI-DSPLib/: cplusplus.diff  download-extract-dsplib.sh  pipeline-dma-lea.diff  vendor.sh
TI-DSPLib/include/: DSPLib_lea.h  DSPLib_support.h
TI-DSPLib/source/lea/: msp_lea_flags.c
TestArangement/: DBTest.c  DBTest.h  FailureTest.c  FailureTest.h  Overhead.c  StackInVM.c  StackInVM.h
Tools/: dvfs.c  dvfs.h  my_timer.c  my_timer.h  myuart.c  myuart.h
charts/: generate.py  msp430-1000uF-1V-10mA.txt  msp430-1000uF-1V-5mA.txt  msp430-150uF-1V-10mA.txt  msp430-150uF.txt  msp430-unstable.txt  msp430.txt  msp432-unstable.txt  msp432.txt
common/: c_callbacks.h  cnn_common.cpp  cnn_common.h  conv.cpp  conv.h  counters.cpp  counters.h  debug.cpp  debug.h  fc.cpp  gemm.cpp  intermittent-cnn.cpp  intermittent-cnn.h  my_debug.cpp  my_debug.h  my_dsplib.cpp  my_dsplib.h  op_handlers.cpp  op_handlers.h  op_utils.cpp  op_utils.h  plat-linux.cpp  plat-linux.h  plat-mcu.cpp  plat-mcu.h  plat-msp430.cpp  plat-msp430.h  plat-pc.cpp  plat-pc.h  platform-private.h  platform.cpp  platform.h  pooling.cpp
data/: .gitignore  HAR-CNN.onnx  KWS-DNN_S-opt.onnx  KWS-DNN_S.onnx  convert-kws.py  convert-kws.sh  data.csv  download-cifar10.sh  download-mnist.sh  generate.py  mnist-8-opt.onnx  motivation.py  squeezenet_cifar10-opt.onnx  squeezenet_cifar10.onnx
dnn-models/: configs.py  convert-har.py  convert-kws.py  download-mnist-model.py  downsampled-imagenet.py  export_squeezenet_cifar10.py  squeezenet_cifar10.onnx  transform.py  utils.py
dnn-models/SqueezeNet_vs_CIFAR10/: deploy_squeezenet.ipynb  squeezenet_architecture.ipynb  squeezenet_architecture.py  visualize_cifar.ipynb
dnn-models/SqueezeNet_vs_CIFAR10/models/: squeeze_net.h5  squeeze_net.json
dnn-models/deep-learning-HAR/: .gitignore  HAR-CNN.ipynb  HAR-CNN.pb  requirements.txt
dnn-models/deep-learning-HAR/utils/: utilities.py
dnn-models/parse_model/: utils.c
driverlib/MSP430FR5xx_6xx/: gpio.c
exp/: compare-model-output.py  measure-intermittent.py  model_output.proto  original_model_run.py  run-intermittently.py
fake-msp430sdk/: msp430.c  msp430.h
intermittent-cnn/: .gitignore  Makefile  common.c  common.h  intermittent-cnn.c  op_handlers.c  op_handlers.h  transform.py
intermittent-cnn/DSPLib_1_30_00_02/source/vector/: msp_mac_q15.c
intermittent-cnn/fake-msp430sdk/: msp430.h
models/: convert-har.py  convert-kws.py  download-mnist-model.py  mnist-8.onnx
msp430/: .cproject  .gitignore  .project  README.md  TI-DSPLib  lnk_msp430fr5994.cmd  main.c  main.h
msp430/.launches/: FreeRTOS_based.launch  RTOSDemo.launch  intermittent-cnn-msp430.launch
msp432/: .ccsproject  .cproject  .gitignore  .project  ARM-CMSIS  main.c  msp432p401r.lds  startup_msp432p401r_gcc.c
msp432/.launches/: intermittent-cnn-msp432.launch  test_msp432.launch
parse_model/: Makefile
patches/: ARM-CMSIS.diff  TI-DSPLib.diff
tools/: dvfs.c  dvfs.h  myuart.c  myuart.h  our_misc.h  our_misc.s  portable.h
tools/ext_fram/: extfram.c  extfram.h
utils/: README.md  TODO.md  convert-kws.py  download-mnist-model.py  export_squeezenet_cifar10.py  format_onnxruntime_output.py  gcov.sh  make-public-copy.sh  run-test.py  sync-patches.sh  test-centos7.sh  test-github-actions-windows.bat  test-github-actions.sh  test.sh
utils/parse_model/: .gitignore  Makefile  parse_model.c  utils.h
vendor-patches/: ARM-CMSIS.diff  TI-DSPLib.diff
